commiting line ending uniformity, file deduplication, and critical natives injection